--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Cabin';
-    background-color: #758190;
+    background-color: #006d77;
 }
 
 #tentacles {
@@ -11,7 +11,7 @@ body {
 
 .header {
     display: flex;
-    background-color: lightblue;
+    background-color: #ffc300;
     padding: 1%;
     align-items: center;
     margin-left: -10px;
@@ -30,7 +30,7 @@ body {
 }
 
 .stats-card {
-    background-color: #a8b0bc;
+    background-color: #caf0f8;
     border-radius: 7px;
     padding: 1%;
     margin: 1%;
